fix: Fix coverage

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
-      run: xcodebuild -scheme CKCodable -destination 'platform=iOS Simulator,name=iPhone 14 Pro' -resultBundlePath TestResults test
+      run: xcodebuild -scheme CKCodable -destination 'platform=macOS,arch=x86_64' -resultBundlePath TestResults test
     - uses: kishikawakatsumi/xcresulttool@v1
       with:
         path: TestResults.xcresult
